--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,9 +33,12 @@ h4{
     
 }
 #start{
-    
+    margin-top: 60px;
     width: 60vw;
     height: 8vw;
+}
+#strt{
+    font-size: 5vw;
 }
 .QSTN{
     margin-bottom: 50px;
